<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xesc_2040_driver</name>
  <version>0.1.0</version>
  <description>
    ROS2 driver for the XESC 2040 (RP2040-based) motor controller.
    Ported from open_mower_ros (ROS1) for OpenMowerNext.
  </description>
  <maintainer email="openmower@openmower.org">OpenMower Team</maintainer>
  <license>BSD-3-Clause</license>

  <author email="clemens@2040.io">Clemens Elflein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xesc_msgs</depend>
  <depend>xesc_interface</depend>
  <depend>serial</depend>
  <depend>libboost-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
